Add meeting notes for week 2

--- a/meetings/2018-09-25.md
+++ b/meetings/2018-09-25.md
@@ -1,7 +1,7 @@
 # Zeit und Personen
 
 - Woche 2
-- 2018-09-25, 08:30 bis ??:??
+- 2018-09-25, 08:30 bis 09:30
 - Stefan Keller und Florian Bruhin
 
 # Last/Blockers/Next
@@ -28,3 +28,21 @@
 - Projektmanagement - was wird wie detailliert erwartet?
 
 # Notizen
+
+- Sitzungen: jeweils 8:30, nicht wie fälschlicherweise eingetragen 9:30
+- Referenzen verwalten: Einfachheitshalber einfach ins Bibtex-File?
+- Seitenanzahl: ~40
+- Time Tracking: Nur grobe Kategorien, wie jetzt angefangen
+
+Inhaltsverzeichnis:
+
+- Code Review zu automatisierten Tests dazu
+- Unterschied z.B. "Vision" von technischem Bericht vs. Projektdoku: Ersteres ist eher die grobe Vision, letzteres dann eher konkret zur Implementation (z.B. wie sich Klassen/Packages ändern)
+- Keine allein stehenden Unterabschnitte zu einem Abschnitt
+- Zitieren: APA style, im Text z.B. (Keller et al., 2017)
+
+# TODO
+
+- Auf nächstes Mal z.B. "Team and Roles" bearbeiten.
+- Wiki aktualisieren, Aufgabenstellung prüfen
+- Stefan bereitet PDF für Aufgabenstellung vor
