Add meeting notes

--- a/meetings/2018-10-02.md
+++ b/meetings/2018-10-02.md
@@ -1,7 +1,7 @@
 # Zeit und Personen
 
 - Woche 3
-- 2018-10-02, 08:30 bis 09:30
+- 2018-10-02, 08:30 bis 09:15
 - Stefan Keller und Florian Bruhin
 
 # Last/Blockers/Next
@@ -14,3 +14,9 @@
 - Next
   - v1.5.0 release (sobald PyQt 5.11.3 draussen, geplant Di/Mi)
   - Weitere PRs: 20 unreviewed, plus 8 reviewed (warten auf Autor)
+
+# Notizen
+
+- TODO: Aufgabenstellung prüfen!
+- URLs in Fussnoten für Zusatzinfos sind OK, brauchen kein Datum
+- geplant: PRs weitermergen; Notiz zu refactoring hinzufügen
