--- a/doc/main.tex
+++ b/doc/main.tex
@@ -62,6 +62,7 @@
 % Grobe Beschreibung des eigenen Lösungskonzepts
 \section{Summary}
 % z.T. Wiederholung im Groben, z.T. Verweise auf Teil II-Kapitel
+\section{...}
 
 % Resultate, Bewerung und Ausblick
 \chapter{Results}
@@ -135,8 +136,32 @@
 \chapter{Project Management}
 % Prototypen, Releases, Meilensteine
 \section{Prototypes, Releases, Milestone}
+
 % Team, Rollen und Verantwortlichkeiten
 \section{Team and Roles}
+\emph{Florian Bruhin} is both the primary maintainer of qutebrowser and the
+author of this student research project. He's been working on qutebrowser since
+December 2013 and started studying Computer Science at HSR in 2016.
+
+Professor \emph{Stefan Keller}, institute partner at the Institute for Software
+(IFS) at HSR is the advisor for this project.
+
+The qutebrowser community is not directly involved in this research project, but
+is the primary audience of the resulting work. It has also contributed many
+ideas and use cases for future
+plugins\footnote{\url{https://github.com/qutebrowser/qutebrowser/issues/30}}.
+
+\emph{Fritz Reichwald} (fiete201\footnote{\url{https://github.com/fiete201}})
+is a long-time qutebrowser user who is working on migrating qutebrowser's
+documentation system from asciidoc\footnote{\url{http://asciidoc.org/}} (which
+is deprecated) to the Sphinx\footnote{\url{http://www.sphinx-doc.org/}}
+documentation generator. This change was
+planned\footnote{\url{https://github.com/qutebrowser/qutebrowser/issues/345}}
+since December 2014, so his help with tackling this is very much appreciated.
+This project will benefit from his work, as Sphinx, unlike asciidoc, is a
+very good fit for documenting APIs. His work is clearly marked as such in this
+documentation.
+
 % Aufwandschätzung, Zeitplan, Projektplan
 \section{Project Schedule}
 % Risiken
