Add meeting notes

--- a/meetings/2018-10-09.md
+++ b/meetings/2018-10-09.md
@@ -19,3 +19,13 @@
   - Weitere PRs: 7 unreviewed, plus 16 reviewed (warten auf Autor)
 
 # Notizen
+
+- Folgende Woche: 1 Tag PRs, 1 Tag Projektplan
+- Aufgabenstellung-Änderungen soweit okay - Flo editierts direkt im Wiki
+- Sphinx-Doku falls möglich im Anhang, ist ja dann auch referenzierbar
+- Sprint-Planung: 1-Wochen-Sprints
+- TODO: Nochmal mit fiete reden wegen Sphinx
+- TODO: Mail verlinken in contribution guideline notice
+- Idee: API review milestone (Raphael und/oder Nicolas vom IFS, ggf. core contributors)
+- jedoch weniger einzelne Reviews (Woche für Woche)
+- Doku: Agile Projektentwicklung, mit GitHub project boards als Tools.
