--- a/doc/main.tex
+++ b/doc/main.tex
@@ -10,10 +10,53 @@
 
 \begin{document}
 
-\title{qutebrowser made extendible \\ FIXME}
-\author{Florian Bruhin \\ \url{florian@qutebrowser.org}}
-\date{\today}
-\maketitle
+%\title{qutebrowser made extendible \\ FIXME}
+%\author{Florian Bruhin \\ \url{florian@qutebrowser.org}}
+%\date{\today}
+%\maketitle
+
+\begin{titlepage}
+
+\begin{flushleft}
+
+% Upper part of the page
+\noindent\begin{minipage}[t]{0.49\textwidth}
+	\begin{flushleft}
+		\vspace{3pt} %needed else aligned to bottom
+		\includegraphics[height=0.12\textheight]{img/hsr.eps}
+	\end{flushleft}
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.49\textwidth}
+	\begin{flushright}
+		\vspace{0pt} %needed else aligned to bottom
+		\includegraphics[height=0.15\textheight]{img/qutebrowser.png}
+	\end{flushright}
+\end{minipage}
+\\[4cm]
+
+{\huge \bfseries qutebrowser made extendible}\\[0.5cm]
+%{\large \bfseries Student Research Project (Studienarbeit)}\\[2cm]
+{\large \bfseries Term Project (Studienarbeit)}\\[2cm]
+
+Departement of Computer Science\\
+University of Applied Sciences Rapperswil\\
+\url{https://www.hsr.ch/}\\[1cm]
+
+% Author and advisor
+Author: Florian Bruhin\\[0.3cm]
+Advisor: Prof.~Stefan Keller\\[0.3cm]
+External Co-Examiner: Claude Eisenhut, Eisenhut Informatik AG
+
+% Bottom of the page
+\vfill
+Date: {\today}
+
+\end{flushleft}
+
+\end{titlepage}
+
+
 
 \chapter*{Abstract}
 
