--- a/doc/main.tex
+++ b/doc/main.tex
@@ -76,108 +76,213 @@ Date: {\today}
 
 % Einführung
 \chapter{Introduction}
+
+\section{Background}
+The qutebrowser project exists since December 2013. It is a keyboard-focused
+browser with a minimal GUI, based on Python and PyQt5.
+
+A plugin API for users to write their own extensions to qutebrowser is a
+long-standing feature
+request\footnote{\url{https://github.com/qutebrowser/qutebrowser/issues/30}},
+which has often been requested by its users.
+
+It's difficult to estimate qutebrowser's user count, but it's likely used by a
+couple thousand users, so a plugin API is also vital in order to be able to move
+less popular features out of the core part of qutebrowser.
+
 % Problemstellung, Vision
 \section{Vision}
+
+Many qutebrowser users are power-users and, as such, have very specific (and
+sometimes unique) feature requests and workflows. It should be made possible for
+those users to extend qutebrowser with custom plugins in an easy way, in order
+to keep qutebrowser's core small.
+
+Since qutebrowser already has a thriving community, this change also intends to
+decentralize development efforts, as it makes it possible for power-users and
+developers to maintain their plugins independently from the core development.
+
 % Ziele und Unterziele
 \section{Goals}
+
+Initially, qutebrowser was developed without knowledge of proper software
+engineering practices, which resulted in some maintainability issues. While many
+of those issues have been cleaned up since, some still remain. Those
+refactorings affect the API exposed to plugins, and therefore should be taken
+care of before attempting to design a plugin API.
+
+The full list of relevant refactorings is tracked as a Kanban
+board\footnote{\url{https://github.com/qutebrowser/qutebrowser/projects/3}} in
+qutebrowser's GitHub repository. The biggest planned changes are the following:
+
+\begin{itemize}
+  \item \url{https://github.com/qutebrowser/qutebrowser/issues/1456}: \\ Parts of qutebrowser already use Python type
+    annotations\footnote{\url{https://www.python.org/dev/peps/pep-0484/}}, but
+    only if contributors decide to use them. In addition to that, no type
+    checker such as mypy\footnote{\url{http://mypy-lang.org/}} is currently run
+    as part of qutebrowser's continuous integration (CI) pipeline, thus allowing
+    regressions to occur. As part of this project, a type checker should be
+    introduced into the CI infrastructure, and any code exposed via the plugin
+    API should be annotated with proper type annotations.
+  \item \url{https://github.com/qutebrowser/qutebrowser/issues/345}: \\
+    To generate HTML documentation, qutebrowser currently uses
+    asciidoc\footnote{\url{http://asciidoc.org/}} which is unsuitable for API
+    documentation and ceased maintainance. An external contributor (see page
+    \pageref{fiete}) is currently working on migrating to the
+    Sphinx\footnote{\url{http://www.sphinx-doc.org/}} toolchain, and should be
+    supported with his work throughout the SA.
+  \item \url{https://github.com/qutebrowser/qutebrowser/issues/640}: \\
+    Global objects are registered in a object registry based on a name as
+    string (``stringly-typed''\footnote{\url{http://wiki.c2.com/?StringlyTyped}}).
+    This historically caused various object-lifetime related issues, and also
+breaks tooling such as the mypy type checker. All code using the object registry
+should be refactored to use better alternatives such as constructor arguments
+(dependency injection).
+\end{itemize}
+
 % Rahmenbedingungen, Umfeld, Definitionen, Abgrenzungen
 \section{Context}
+
+
 % Vorgehen, Aufbau der Arbeit
 \section{Methods and Structure}
 
+
 % "Stand der Technik" (Was gibt es schon?)
 \chapter{Existing Work}  
+
 % Bestehende Lösungsansätze und Normen
 \section{Existing Approaches and Norms (Existing APIs?)}
+
 % Kurzbeschreibung und Charakterisierung
 % \section{Summary and Characerization}
+
 % Defizite (Hinweise auf Weiterentwicklungs-, bzw. Verbesserungspotential)
 \section{Problems with existing solutions}  
 
+
 % Bewertung (Evaluation)
 \chapter{Evaluation}
+
 % Kriterien (Wie wird bewertet?)
 \section{Criteria}
+
 % Schlussfolgerungen, eigener Lösungsansatz
 \section{Conclusion}
 
+
 % Umsetzungskonzept (des eigenen Lösungsansatzes)
 \chapter{Concept}
+
 % Grobe Beschreibung des eigenen Lösungskonzepts
 \section{Summary}
+
 % z.T. Wiederholung im Groben, z.T. Verweise auf Teil II-Kapitel
 \section{...}
 
+
 % Resultate, Bewerung und Ausblick
 \chapter{Results}
+
 % Zielerreichung
 \section{Achievement of Objectives}
+
 % Ausblick: Weiterentwicklung (nur wichtigste Punkte)
 \section{Future Work}
+
 % Persönliche Berichte
 \section{Personal Review}
+
 % Dank
 \section{Thanks}
 
 
+
 % Teil II SW-Projektdokumentation ("klassisches" RUP 2/HSR)  
 \part{Project Documentation}
+
+
 % Vision (ev. auf Kapitel 1.1 verweisen)
 \chapter{Vision}
 
+
 % Anforderungsspezifikation
 \chapter{Requirements Specification}
+
 % Anforderung an die Arbeit
 \section{Requirements of the Project}
+
 % Use Cases (Success Scenario / Success Diagram)
 \section{Use Cases}
+
 % System-Sequenzdiagramme
 \section{System Sequence Diagrams}
+
 % Weitere Funktionen, die nicht erfasst wurden
 \section{Further Functionality}
+
 % Nicht-funktionale Anforderungen (Rahmbenbedingungen, evtl. Verweis auf 1.3)
 \section{Non-functional Requirements}
+
 % Detailspezifikation
 \section{Detailed Specification}
 
+
 % Analyse (Business Model)
 \chapter{Analysis}
+
 % Domain Modell, Klassendiagramme (konzeptionell)
 \section{Domain Model}
+
 % Objektkatalog (Beschreibung der Konzepte, bzw. Entitätsmengen)
 \section{Objects}
 
+
 % Design (Entwurf)
 \chapter{Design}
+
 % Architektur
 \section{Architecture}
+
 % Objektkatalog (Klassenkonzepte, Verantwortlichkeiten und Konsistenzbedingungen)
 \section{Objects}
+
 % Package- und Klassendiagramme (konzeptionell)
 \section{Packages and Classes}
+
 % Sequenzdiagramm, UI Design
 \section{Sequence Diagrams}
 
+
 % Implementation (Entwicklung)
 \chapter{Implementation and Test}
+
 % Implementation: Erläuterungen wichtiger konkreter Klassen
 \section{Important Classes}
+
 % Automatische Testverfahren
 \section{Automated Testing}
+
 % Manuelle Testverfahren, etc.
 \section{Manual Testing}
 
+
 % Resultate und Weiterentwicklung
 \chapter{Results and Future Work}
+
 % Resultate (ev. nach oben in Teil I Kap. 5 eingleidern)
 \section{Results}
+
 % Möglichkeiten der Weiterentwicklung
 \section{Possible Future Work}
+
 % Vorgehen (welche Mögl. würde man nun wie weiterentwickeln?)
 \section{Future Approach}
 
+
 % Projektmanagement (Planung, Soll)
 \chapter{Project Management}
+
 % Prototypen, Releases, Meilensteine
 \section{Prototypes, Releases, Milestone}
 
@@ -195,6 +300,7 @@ is the primary audience of the resulting work. It has also contributed many
 ideas and use cases for future
 plugins\footnote{\url{https://github.com/qutebrowser/qutebrowser/issues/30}}.
 
+\label{fiete}
 \emph{Fritz Reichwald} (fiete201\footnote{\url{https://github.com/fiete201}})
 is a long-time qutebrowser user who is working on migrating qutebrowser's
 documentation system from asciidoc\footnote{\url{http://asciidoc.org/}} (which
@@ -213,6 +319,7 @@ documentation.
 % Prozessmodel
 \section{Process Model}
 
+
 % Projektmonitoring (Ist-Beschreibung, so ist es passiert)
 \chapter{Project Monitoring}
 % Soll-Ist-Zeit-Vergleich
@@ -220,11 +327,14 @@ documentation.
 % Codestatistik (Zeilen: Kommentare, Klassen, Packages)
 \section{Code Statistics}
 
+
 \chapter{Software Documentation}
 % Maybe separate (Sphinx)
 
 
+
 \part{Appendices}
+
 
 \chapter{Glossary and Abbreviations}
 
