Update meeting scaffolding

--- a/meetings/2018-10-26.md
+++ b/meetings/2018-10-26.md
@@ -9,11 +9,11 @@
 - Last
   - 11 PRs merged (10 neue)
   - 25 Issues zugemacht (grösstenteils invalid), 17 neue
-  - v1.5.1 release
+  - v1.5.1 und v1.5.2 release
   - Dokumentation:
     - Titelblatt
     - BibTeX
-    - Background / Vision / Goals
+    - Introduction: Background / Vision / Goals / Context
   - Material zu Y-Approach und API-Design gelesen
   - Grösseres pytest upgrade
   - GMail reload loop bug
