Add 2018-10-26 meeting notes

--- a/meetings/2018-10-26.md
+++ b/meetings/2018-10-26.md
@@ -17,8 +17,8 @@
   - Material zu Y-Approach und API-Design gelesen
   - Grösseres pytest upgrade
   - GMail reload loop bug
-  - Krank von Do-So
 - Blockers
+  - Krank von Do-So
   - SA-Zimmer besetzt bis Montag
 - Next
   - Fokus: Doku und nicht mehr PRs
@@ -30,3 +30,15 @@
 - Englisch-Sprachberatung? Siehe [Wiki Farhad Mehta](https://wiki.hsr.ch/FarhadMehta/wiki.cgi?ProjectInformation#16).
 
 # Notizen
+
+- Aufgabenstellung auf nächste Woche
+- Fokus: Doku, API Designentscheide
+- Approach für API Design: Intuitiv erste APIs bestimmen, Gegencheck mit existierender Arbeit (WebExtensions) 
+- Einflüsse:
+  - technisch von Qt beeinflusst
+  - Vergleichen mit WebExtensions
+  - Interner qutebrowser-Code zum auslagern
+  - Externe Plugin-Ideen (z.B. WebExtensions) als Inspiration, ist aber JS
+  - "Pythonic"
+- Y-Approach: Nur punktuell für wichtige Designentscheide
+- Nächster Termin: Dienstag 30., 09:05
