Add first API docs

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -5,3 +5,23 @@
   year =         {2014},
 }
 
+@TechReport{w3c-webext,
+  author =    {Mike Pietraszak},
+  title =     {Browser Extensions - Draft Community Group Report 23 July 2017},
+  howpublished = "\url{https://browserext.github.io/browserext/}",
+  year =      {2017},
+  note =      {accessed 2018-10-26},
+  institution = {W3C and Microsoft Corporation},
+}
+
+
+
+@Misc{mozilla-webext,
+  author =    {Kev Needham},
+  title =     {The Future of Developing Firefox Add-ons},
+  howpublished = {\url{https://blog.mozilla.org/addons/2015/08/21/the-future-of-developing-firefox-add-ons/}},
+  year =      {2015},
+  note =      {accessed 2018-10-29},
+  institution =    {Mozilla},
+}
+
