Add more text about XUL

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -25,3 +25,29 @@
   institution =    {Mozilla},
 }
 
+@Misc{mozilla-signing,
+  author = {Daniel Veditz},
+  title = {The Case for Extension Signing},
+  howpublished = {\url{https://blog.mozilla.org/addons/2015/04/15/the-case-for-extension-signing/}},
+  year = {2015},
+  note = {accessed 2018-10-29},
+  institution = {Mozilla},
+}
+
+
+@Article{lwn-pysandbox,
+  author =       {Jake Edge},
+  title =        {The failure of pysandbox},
+  journal =      {Linux Weekly Newsletter},
+  year =         {2013},
+  howpublished = {\url{https://lwn.net/Articles/574215/}},
+  note = {accessed 2018-10-29},
+}
+
+@Misc{nedbat-eval,
+  author = {Ned Batchelder},
+  title = {Eval really is dangerous},
+  howpublished = {\url{https://nedbatchelder.com/blog/201206/eval_really_is_dangerous.html}},
+  year = {2012},
+  note = {accessed 2018-10-29},
+}
