--- a/doc/main.tex
+++ b/doc/main.tex
@@ -46,7 +46,7 @@
 %{\large \bfseries Student Research Project (Studienarbeit)}\\[2cm]
 {\large \bfseries Term Project (Studienarbeit)}\\[2cm]
 
-Departement of Computer Science\\
+Department of Computer Science\\
 University of Applied Sciences Rapperswil\\
 \url{https://www.hsr.ch/}\\[1cm]
 
