Meeting scaffolding week 7

--- a/meetings/2018-10-26.md
+++ b/meetings/2018-10-26.md
@@ -1,7 +1,7 @@
 # Zeit und Personen
 
 - Woche 6
-- 2018-10-26, 13:00 bis XX:XX
+- 2018-10-26, 13:00 bis 14:00
 - Stefan Keller und Florian Bruhin
 
 # Last/Blockers/Next
