Fix lwn-pysandbox type so URL is shown

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -35,7 +35,7 @@
 }
 
 
-@Article{lwn-pysandbox,
+@Misc{lwn-pysandbox,
   author =       {Jake Edge},
   title =        {The failure of pysandbox},
   journal =      {Linux Weekly Newsletter},
