Add/fix issues from meeting

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -44,15 +44,15 @@
 
 {\huge \bfseries qutebrowser made extendible}\\[0.5cm]
 %{\large \bfseries Student Research Project (Studienarbeit)}\\[2cm]
-{\large \bfseries Term Project (Studienarbeit)}\\[2cm]
+{\large \bfseries Term Project (Studienarbeit) \\[0.2cm] Autumn Term 2018/2019}\\[2cm]
 
 Department of Computer Science\\
-University of Applied Sciences Rapperswil\\
-\url{https://www.hsr.ch/}\\[1cm]
+University of Applied Sciences Rapperswil (HSR)\\
+\url{www.hsr.ch}\\[1cm]
 
 % Author and advisor
 Author: Florian Bruhin\\[0.3cm]
-Advisor: Prof.~Stefan Keller\\[0.3cm]
+Advisor: Prof.~Stefan Keller, HSR\\[0.3cm]
 External Co-Examiner: Claude Eisenhut, Eisenhut Informatik AG
 
 % Bottom of the page
@@ -85,8 +85,13 @@ Date: {\today}
 \chapter{Introduction}
 
 \section{Background}
+
+\fixme{main focus: What's qutebrowser about? When/technology should be in the
+  second paragraph. Maybe define web browser. Also define Python/PyQt. List
+alternatives.}
+
 The qutebrowser project exists since December 2013. It is a keyboard-focused
-browser with a minimal GUI, based on Python and PyQt5.
+web browser with a minimal GUI, based on Python and PyQt5.
 
 A plugin API for users to write their own extensions to qutebrowser is a
 long-standing feature
@@ -99,6 +104,8 @@ less popular features out of the core part of qutebrowser.
 
 % Problemstellung, Vision
 \section{Vision}
+
+\fixme{further define power users}
 
 Many qutebrowser users are power-users and, as such, have very specific (and
 sometimes unique) feature requests and workflows. It should be made possible for
