Finish meeting notes

--- a/meetings/2018-10-30.md
+++ b/meetings/2018-10-30.md
@@ -1,7 +1,7 @@
 # Zeit und Personen
 
 - Woche 7
-- 2018-10-30, 09:05 bis XX:XX
+- 2018-10-30, 09:05 bis 10:05
 - Stefan Keller und Florian Bruhin
 
 # Last/Blockers/Next
@@ -22,3 +22,5 @@
   - PRs: 17 unreviewed, plus 16 reviewed (warten auf Autor)
 
 # Notizen
+
+- Fokus auf Dokumentation und Projektplanung (Meilensteine etc.)
